# roomie-bot

./: .gitignore  .travis.yml  README.md  pyproject.toml  qa.json  setup.py
docs/: hu.md
img/: robotitooo.psd
roomie-bot/: bot.py
roomie-bot/database/: database.py  room.sqlite
roomie-bot/expenses/: expenses.py
roomie_bot/: __main__.py  bot.py
roomie_bot/database/: database.py
roomie_bot/expenses/: expenses.py
roomie_bot/tests/: test_expenses.py
tests/: test_api_rest.py  test_bot.py  test_database.py  test_expenses.py
