[tool.poetry]
name = "roomie-bot"
version = "0.1.0"
description = "Telegram bot with utilities for roommates"
authors = ["Dipzza <dipzza@protonmail.ch>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.8"
python-telegram-bot = "^12.8"

[tool.poetry.dev-dependencies]
pytest = "^6.1.0"
pytest-cov = "^2.10.1"
taskipy = "^1.3.0"

[tool.taskipy.tasks]
test = "pytest"
bot = "roomie_bot/bot.py"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
